--- a/register.html
+++ b/register.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>注册</title>
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/front.css">
 </head>
 <body>
+<!--
 <div class="box">
     <div class="box1">
         <div class="box2"><span>注册</span></div>
@@ -13,11 +14,41 @@
     </div>
     <form method="post" action="php/register.php" id="login">
         <p class="inner">用户名:&emsp;<input type="text" name="username"></p>
-        <p class="inner">密码:&emsp;&emsp;<input type="text" name="password"></p>
+        <p class="inner">密码:&emsp;&emsp;<input type="password" name="password"></p>
         <p class="center"><input type="submit" value="注册"></p>
     </form>
 </div>
 <script src="js/script.js"></script>
+-->
 
+<div class="loginBox">
+    <div class="innerBox">
+        <div class="box1">
+            <div class="box2"><span>注册</span></div>
+            <div class="box3" ><span class="corner" onclick="change('index.html')">登录</span></div>
+        </div>
+        <form method="post" action="php/register.php">
+            <div class="item">
+                <input type="text" id="username" name="username" required>
+                <label for="username">Username</label>
+            </div>
+            <div class="item">
+                <input type="password" id="password" name="password" required>
+                <label for="password">Password</label>
+            </div>
+            <button class="btn">Submit
+                <span></span>
+                <span></span>
+                <span></span>
+                <span></span>
+            </button>
+
+        </form>
+    </div>
+</div>
+<script src="js/script.js"></script>
+
+</body>
+</html>
 </body>
 </html>
